# mem0-project

./: .env.example  .gitignore  README.md  app.py  gemini_service.py  mem0_service.py  pyproject.toml
docs/superpowers/plans/: 2026-07-02-mem0-gemini-assistant.md
docs/superpowers/specs/: 2026-07-02-mem0-gemini-assistant-design.md
tests/: test_gemini_service.py  test_mem0_service.py
