[project]
name = "mem0-assistant"
version = "0.1.0"
description = "Multi-user Streamlit chat assistant backed by Mem0 Cloud memory and Gemini 2.5 Flash"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.10.0",
    "mem0ai>=2.0.11",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
